# ssm

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO  note.md
docs/: design.md
include/: arg_parse.h  arm_std.h  cli.h  keil_pack.h  logger.h  main.h  makefile.h  mcu.h  pack.h  std.h  std_lib.h  user_input.h  utils.h
resources/: Makefile.template  config.json  main.c  ssm_config.json
script/: a.py  download_arm_std.py
src/: arg_parse.cpp  arm_std.cpp  cli.cpp  keil_pack.cpp  logger.cpp  main.cpp  makefile.cpp  mcu.cpp  pack.cpp  std_lib.cpp  utils.cpp
